crates/shipper-core/src/state/store/snapshots/shipper_core__store__snapshot_tests__event_package_started.snap
---
source: crates/shipper-store/src/lib.rs
expression: json
---
{
  "timestamp": "2025-01-15T12:00:00Z",
  "event_type": {
    "type": "package_started",
    "name": "my-crate",
    "version": "1.0.0"
  },
  "package": "my-crate@1.0.0"
}
