crates/shipper-core/src/state/store/snapshots/shipper_core__store__snapshot_tests__execution_state_all_package_states.snap
---
source: crates/shipper-core/src/state/store/snapshot_tests.rs
expression: json
---
{
  "state_version": "shipper.state.v1",
  "plan_id": "plan-multi",
  "registry": {
    "name": "crates-io",
    "api_base": "https://crates.io",
    "index_base": "https://index.crates.io"
  },
  "created_at": "2025-01-15T12:00:00Z",
  "updated_at": "2025-01-15T12:00:00Z",
  "attempt_history": [],
  "packages": {
    "a@1.0.0": {
      "name": "a",
      "version": "1.0.0",
      "attempts": 0,
      "state": {
        "state": "pending"
      },
      "last_updated_at": "2025-01-15T12:00:00Z"
    },
    "b@1.0.0": {
      "name": "b",
      "version": "1.0.0",
      "attempts": 1,
      "state": {
        "state": "uploaded"
      },
      "last_updated_at": "2025-01-15T12:00:00Z"
    },
    "c@1.0.0": {
      "name": "c",
      "version": "1.0.0",
      "attempts": 1,
      "state": {
        "state": "published"
      },
      "last_updated_at": "2025-01-15T12:00:00Z"
    },
    "d@1.0.0": {
      "name": "d",
      "version": "1.0.0",
      "attempts": 0,
      "state": {
        "state": "skipped",
        "reason": "already published"
      },
      "last_updated_at": "2025-01-15T12:00:00Z"
    },
    "e@1.0.0": {
      "name": "e",
      "version": "1.0.0",
      "attempts": 3,
      "state": {
        "state": "failed",
        "class": "permanent",
        "message": "auth error"
      },
      "last_updated_at": "2025-01-15T12:00:00Z"
    },
    "f@1.0.0": {
      "name": "f",
      "version": "1.0.0",
      "attempts": 2,
      "state": {
        "state": "ambiguous",
        "message": "timeout during upload"
      },
      "last_updated_at": "2025-01-15T12:00:00Z"
    }
  }
}
