crates/shipper-core/src/state/store/snapshots/shipper_core__store__snapshot_tests__execution_state_empty_packages.snap
---
source: crates/shipper-core/src/state/store/snapshot_tests.rs
expression: json
---
{
  "state_version": "shipper.state.v1",
  "plan_id": "plan-empty",
  "registry": {
    "name": "crates-io",
    "api_base": "https://crates.io",
    "index_base": "https://index.crates.io"
  },
  "created_at": "2025-01-15T12:00:00Z",
  "updated_at": "2025-01-15T12:00:00Z",
  "attempt_history": [],
  "packages": {}
}
