crates/shipper-core/src/state/store/snapshots/shipper_core__store__snapshot_tests__registry_crates_io.snap
---
source: crates/shipper-core/src/state/store/snapshot_tests.rs
expression: json
---
{
  "name": "crates-io",
  "api_base": "https://crates.io",
  "index_base": "https://index.crates.io"
}
